Same project, but on maven. Added docker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+# PostgreSQL Database Connection
+spring.datasource.url=jdbc:postgresql://db:5432/content_calendar
 spring.datasource.username=postgres
 spring.datasource.password=password
-spring.jpa.properties.hibernate.dialect=com.github.gizmo.hibernate.sqlite.SQLiteDialect
+
+# Hibernate Dialect for PostgreSQL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# SQL Initialization
 spring.sql.init.mode=always
 
+# Custom Properties for Your Application
 cc.welcome-message=Hello from Dan's Calendar
 cc.about=This is awesome!
