--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,32 @@
-version: '3.9'
+version: '3.8'
 services:
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
+    container_name: spring-app
     ports:
-      - "8080:8080"
+      - "8080:8080" # Map the container's port 8080 to your local machine's port 8080
+    environment: # Define environment variables for production
+      SPRING_PROFILES_ACTIVE: production
+      PGHOST: postgres # Reference the PostgreSQL container name as the host
+      PGPORT: 5432
+      PGDATABASE: productiondb
+      PGUSER: productionuser
+      PGPASSWORD: productionpassword
     depends_on:
-      - db
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/content_calendar
-      SPRING_DATASOURCE_USERNAME: postgres
-      SPRING_DATASOURCE_PASSWORD: password
+      - postgres # Ensure the PostgreSQL container is started before the app
 
-  db:
+  postgres:
     image: postgres:15-alpine
-    container_name: postgres_container
-    ports:
-      - "5432:5432"
+    container_name: postgres-db
+    restart: always # Automatically restart the database container if it stops
     environment:
-      POSTGRES_DB: content_calendar
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
+      POSTGRES_USER: productionuser
+      POSTGRES_PASSWORD: productionpassword
+      POSTGRES_DB: productiondb
+    ports:
+      - "5432:5432" # Map PostgreSQL's port 5432 to the host machine
     volumes:
-      - postgres_data:/var/lib/postgresql/data
-      - ./src/main/resources/schema.sql:/docker-entrypoint-initdb.d/schema.sql
+      - postgres_data:/var/lib/postgresql/data # Persist data in a Docker volume
 
 volumes:
-  postgres_data:
+  postgres_data: # Volume for persisting PostgreSQL data
