--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
+<!--	<packaging>war</packaging>-->
 	<build>
 		<plugins>
 			<plugin>
