--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
+spring.profiles.active=production
+
 # PostgreSQL Database Connection
-spring.datasource.url=jdbc:postgresql://db:5432/content_calendar
+spring.datasource.url=jdbc:postgresql://localhost:5432/content_calendar
 spring.datasource.username=postgres
 spring.datasource.password=password
-
 # Hibernate Dialect for PostgreSQL
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
