--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
+spring.datasource.url=jdbc:postgresql://${PGHOST}:5432/${PGDATABASE}
 spring.datasource.username=${PGUSER}
 spring.datasource.password=${PGPASSWORD}
 
